--- a/public/webfonts/roboto/roboto.css
+++ b/public/webfonts/roboto/roboto.css
@@ -2,15 +2,15 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    src: local('Roboto'),
-    local('Roboto'),
-    url(Roboto-Regular.ttf) format('truetype');
-    }
-.material-icons {
+    src: local('Roboto');
+}
+
+.roboto-pg {
     font-family: 'Roboto', 'sans-serif';
     font-weight: normal;
     font-style: normal;
     font-size: 24px; /* Preferred icon size */
+    font-optical-sizing: auto;
     display: inline-block;
     line-height: 1;
     text-transform: none;
@@ -26,4 +26,4 @@
     -moz-osx-font-smoothing: grayscale;
     /* Support for IE. */
     font-feature-settings: 'liga';
-    }
+}
