loads Roboto with googleapis font stylesheet

--- a/public/webfonts/roboto/roboto.css
+++ b/public/webfonts/roboto/roboto.css
@@ -6,7 +6,7 @@
 }
 
 .roboto-pg {
-    font-family: 'Roboto', 'sans-serif';
+    font-family: 'Roboto', sans-serif;
     font-weight: normal;
     font-style: normal;
     font-size: 24px; /* Preferred icon size */
