--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,9 +1,25 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
-@layer components {
-    .link {
-        @apply relative hover:text-blue-800 w-fit block after:block after:content-[''] after:absolute after:h-[1.5px] after:bg-blue-800 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center;
-    }
+@config '../../tailwind.config.js';
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
+}
+
+@utility link {
+  @apply relative hover:text-blue-800 w-fit block after:block after:content-[''] after:absolute after:h-[1.5px] after:bg-blue-800 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition after:duration-300 after:origin-center;
 }
