--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,11 @@
 @import 'tailwindcss';
 
 @config '../../tailwind.config.js';
+@plugin "@tailwindcss/forms";
+@theme {
+    --font-roboto: "Roboto", "sans-serif";
+}
+@source inline('font-roboto');
 
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
@@ -11,15 +16,15 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentcolor);
-  }
+    *,
+    ::after,
+    ::before,
+    ::backdrop,
+    ::file-selector-button {
+        border-color: var(--color-gray-200, currentcolor);
+    }
 }
 
 @utility link {
-  @apply relative hover:text-blue-800 w-fit block after:block after:content-[''] after:absolute after:h-[1.5px] after:bg-blue-800 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition after:duration-300 after:origin-center;
+    @apply relative hover:text-blue-800 w-fit block after:block after:content-[''] after:absolute after:h-[1.5px] after:bg-blue-800 after:w-full after:scale-x-0 hover:after:scale-x-100 after:transition after:duration-300 after:origin-center;
 }
