--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,12 @@
 @import 'tailwindcss';
 
-@config '../../tailwind.config.js';
+/*@config '../../tailwind.config.js';*/
 @plugin "@tailwindcss/forms";
 @theme {
     --font-roboto: "Roboto", "sans-serif";
 }
 @source inline('font-roboto');
+@source inline('{sm:,md:,lg:,xl:,2xl:,}max-w-{sm,md,lg,xl,2xl,3xl,4xl,5xl,6xl,7xl}');
 
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
